# 3D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: window_manager.cpp  window_manager.h
src/renderer/: mesh.cpp  mesh.h  transform.cpp
src/renderer/camera/: camera.cpp  camera.h
src/renderer/gl_resources/: ebo.cpp  ebo.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/renderer/model/: mesh.cpp  mesh.h  model.cpp  model.h  transform.cpp  transform.h
src/renderer/shader/: color.vert  shader.cpp  shader.h
